tests/compiletests/ui/lang/core/ptr/allocate_const_scalar.stderr
warning: the feature `ptr_internals` is internal to the compiler or standard library
 --> $DIR/allocate_const_scalar.rs:7:12
  |
7 | #![feature(ptr_internals)]
  |            ^^^^^^^^^^^^^
  |
  = note: using it is strongly discouraged
  = note: `#[warn(internal_features)]` on by default

error: pointer has non-null integer address
   |
note: used from within `allocate_const_scalar::main`
  --> $DIR/allocate_const_scalar.rs:17:5
   |
17 |     *output = POINTER;
   |     ^^^^^^^^^^^^^^^^^
note: called by `main`
  --> $DIR/allocate_const_scalar.rs:16:8
   |
16 | pub fn main(output: &mut Unique<[u8; 4]>) {
   |        ^^^^

error: aborting due to 1 previous error; 1 warning emitted

